--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>zullo fashion</title>
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7386235153483744"
+     crossorigin="anonymous"></script>
+  
   <link rel="icon" href="Black and Light Green Graffiti Never Stop Tshirt.png">
   <style>
     body {
