--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>zullo fashion</title>
   
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7386235153483744"
-     crossorigin="anonymous"></script>
+<meta name="google-adsense-account" content="ca-pub-7386235153483744">
   
   <link rel="icon" href="Black and Light Green Graffiti Never Stop Tshirt.png">
   <style>
